# graphics-programming-2024-final-project

./: .gitignore  README.md
exercises/exercise04/: CMakeLists.txt
exercises/exercise05/: CMakeLists.txt
exercises/finalproject/: CMakeLists.txt  OceanApplication.cpp  OceanApplication.h  main.cpp
exercises/finalproject/shaders/: blinn-phong-terrain.frag  blinn-phong-terrain.vert  ocean.frag  ocean.vert
exercises/finalproject/textures/: README.md
libraries/itugl/include/ituGL/geometry/: Mesh.h
